# ImageCompression

./: CMakeLists.txt  README.md  configure.ps1  configure.sh  test-image-1.bmp.cmp  vcpkg.json
BMPCompression/: CMakeLists.txt
BMPCompression/inc/: CompressedBitmap.h
BMPCompression/src/: CompressedBitmap.cpp
BMPCompression/test/: CMakeLists.txt  test.cpp
BMPCopressionApp/: CMakeLists.txt
BMPCopressionApp/qml/: BrowserListView.qml  FileBrowser.qml  FileBrowserImage.qml  FileListItem.qml  MyScrollBar.qml  app.qrc  main.qml  style.js
BMPCopressionApp/src/: BMPCompress.cpp  BMPCompress.h  BMPCompressionApp.cpp  BMPCompressionApp.h  FileExplorerModel.cpp  FileExplorerModel.h  main.cpp
